--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
