--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1 class="animate__animated animate__fadeInLeftBig animate__slow">Eventually</h1>
+				<h1 class="animate__animated animate__fadeInLeftBig animate__slow">Facsist!</h1>
 				<p class="animate__fadeIn animate__slow"> A simple template for telling the world when you'll launch<br />
 				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
 			</header>
