--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header id="header">
 				<h1 class="animate__animated animate__fadeInLeftBig">Facsist!</h1>
 				<p class="animate__animated animate__fadeIn animate__slower"> A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 U</a>.</p>
 			</header>
 
 		<!-- Signup Form -->
