--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1 class="animate__animated animate__fadeInLeftBig">Facsist!</h1>
+				<h1 class="animate__animated animate__fadeInLeftBig">Fascist!</h1>
 				<p class="animate__animated animate__fadeIn animate__delay-2s"> A simple template for telling the world when you'll launch<br />
 				your next big thing. Brought to you by <a href="http://html5up.net">HTML</a>.</p>
 			</header>
