--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 		<!-- Header -->
 			<header id="header">
 				<h1 class="animate__animated animate__fadeInLeftBig">Fascist!</h1>
-				<p class="animate__animated animate__fadeIn animate__delay-2s"> A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML</a>.</p>
-			</header>
+				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> The reader has the option to make choices that affect the narrative. These choices, no matter
+				how trivial, determine whether this futuristic fascism survives or is quickly toppled in its early conception. 
 
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="#">
