--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">Anthony Campos</a></li>
+					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">The Author</a></li>
 				</ul>
 			</footer>
 
