--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	#footer {
+        margin-top: auto;
+      }
+    </style>
+  </head>
+  <body class="is-preload">
+	  
 	<head>
 		<title>Eventually by HTML5 UP</title>
 		<meta charset="utf-8" />
