--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">The Author</a></li>
+					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">The</a></li>
 				</ul>
 			</footer>
 
