--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<ul class="copyright">
+				
+				<ul class="copyright">]
+					<div id="copyright">
 					<li>&copy;2024 Anthony Campos</li>
+					</div>
 				</ul>
+				
 			</footer>
 
 		<!-- Scripts -->
