--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				
-				<ul class="copyright">]
+				<ul class="copyright">
 					<div id="copyright">
 					<li>&copy;2024 Anthony Campos</li>
 					</div>
