--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				
 				<ul class="copyright">
 					<div id="copyright">
-					<li>&copy;2024 Anthony Campos</li>
+					<li>&copy;2024 Anthony Campos | A SOC 119 Project</li>
 					</div>
 				</ul>
 				
