--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 				how trivial, determine whether this futuristic fascism survives or is quickly toppled in its early conception. 
 
 		<!-- Signup Form -->
+			<a href="https://example.com" class="button">Jump right in.</a>
+					
 			<form id="signup-form" method="post" action="#">
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<input type="submit" value="Sign Up" />
