--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	  
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Future Fascism</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
@@ -22,14 +22,6 @@
 				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> The reader has the option to make choices that affect the narrative. These choices, no matter
 				how trivial, determine whether this futuristic fascism survives or is quickly toppled in its early conception. 
 
-		<!-- Signup Form -->
-			<br>
-			<a href="page1.html" class="button">Jump right in.</a>
-					
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form>
 
 		<!-- Footer -->
 			<footer id="footer">
