--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> The reader has the option to make choices that affect the narrative. These choices, no matter
 				how trivial, determine whether this futuristic fascism survives or is quickly toppled in its early conception. 
 
-
+			<form action="page1.html" method="get">
+			  <button type="submit">Jump right in.</button>
+			</form>
+		
 		<!-- Footer -->
 			<footer id="footer">
 				
