--- a/page1.html
+++ b/page1.html
@@ -11,14 +11,17 @@
 
 		<!-- Header -->
 			<header id="header">
-        <h1>First Page</h1>
+        <h1>Introduction</h1>
 			</header>
+
+
+		
 
 		<footer id="footer">
 				
 				<ul class="copyright">
 					<div id="copyright">
-					<li>&copy;2024 Anthony Campos | A SOC 119 Project</li>
+					<li>&copy;2024 Anthony Campos | A SOC 119 Class Project</li>
 					</div>
 				</ul>
 				
