--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Page1</title>
+		<title>Introduction</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
@@ -13,6 +13,18 @@
 			<header id="header">
         <h1>Introduction</h1>
 			</header>
+
+
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page1.html" method="get">
+			  <button type="submit">Option 1</button>
+			</form>
+
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page1.html" method="get">
+			  <button type="submit">Option 2</button>
+			</form>
+
+
+		
 
 
 		
