--- a/page1.html
+++ b/page1.html
@@ -12,6 +12,7 @@
 		<!-- Header -->
 			<header id="header">
         <h1>Introduction</h1>
+	<p>Sample text sample text sample text</p>
 			</header>
 
 
