--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Page2</title>
+		<title>The Outcome</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
@@ -11,14 +11,14 @@
 
 		<!-- Header -->
 			<header id="header">
-        <h1>Page 2</h1>
+        <h1>Fascist!</h1>
 			</header>
 
 		<footer id="footer">
 				
 				<ul class="copyright">
 					<div id="copyright">
-					<li>&copy;2024 Anthony Campos | A SOC 119 Project</li>
+					<li>&copy;2024 Anthony Campos | A SOC 119 Class Project</li>
 					</div>
 				</ul>
 				
