--- a/page3.html
+++ b/page3.html
@@ -14,6 +14,10 @@
         <h1>Not a Fascist!</h1>
 			</header>
 
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="index.html" method="get">
+			  <button type="submit">Return to homepage.</button>
+			</form>
+
 		<footer id="footer">
 				
 				<ul class="copyright">
