--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
 			</header>
 
 		<form class="animate__animated animate__fadeIn animate__delay-2s" action="index.html" method="get">
-			  <button type="submit">Return to homepage</button>
+			  <button type="submit">Return to homepage.</button>
 			</form>
 
 		<footer id="footer">
