--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,9 @@
 		<!-- Header -->
 			<header id="header">
         <h1>Introduction</h1>
-	<p>Sample text sample text sample text</p>
+	<div class = "container11">
+	<p class="typetext">Sample text sample text sample text</p>
+	</div>
 			</header>
 
 
