--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,7 @@
 			<header id="header">
         <h1>Introduction</h1>
 	<div class="container11">
-	<p class="typetext">Sample text sample text sample text</p>
+	<p class="typewriter">Sample text sample text sample text</p>
 	</div>
 			</header>
 
