--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,9 @@
 			<header id="header">
         <h1>Introduction</h1>
 	<div class="container11">
-	<p class="typewriter">Sample text sample text sample text</p>
+		<div class="typewriter>
+		<p> Sample text sample text sample text</p>
+		</div>
 	</div>
 			</header>
 
