--- a/page1.html
+++ b/page1.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
 	</head>
-	<body class="is-preload">
+	<body>
 
 		<!-- Header -->
 			<header id="header">
