--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
 		<p animate__animated animate__fadeIn animate__delay-2s> Sample text sample text sample text</p>
 		<p animate__animated animate__fadeIn animate__delay-3s> Sample text sample text sample text</p>
 		<p animate__animated animate__fadeIn animate__delay-4s> Sample text sample text sample text</p>
-		<p animate__animated animate__fadeIn animate__delay-5s> Sample text sample text sample text</p>
+		<p animate__animated animate__fadeIn animate__delay-5s> Sampl text sample text sample text</p>
 
 	</header>
 		
