--- a/page1.html
+++ b/page1.html
@@ -15,11 +15,12 @@
         <h1>Introduction</h1>
 			
 		<p  class="animate__animated animate__fadeIn"> Sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-1s"> Sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-2s"> Sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-3s"> Sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-4s"> Sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-5s"> Sample text sample text sample text</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-1s"> Sample text sample text sample text sample text sample text</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-1s"> Sample text sample text sample text sample text sample text</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-2s"> Sample text sample text sample text sample text sample text</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-2s"> Sample text sample text sample text sample text sample text</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-3s"> Sample text sample text sample text sample text sample text</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-3s"> Sample text sample text sample text sample text sample text</p>
 
 	</header>
 		
@@ -27,11 +28,11 @@
 			
 
 
-		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page2.html" method="get">
+		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page2.html" method="get">
 			  <button type="submit">Option 1</button>
 			</form>
 
-		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page3.html" method="get">
+		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page3.html" method="get">
 			  <button type="submit">Option 2</button>
 			</form>
 
