--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,8 @@
 			<header id="header">
         <h1>Introduction</h1>
 			
-		<p  class="animate__animated animate__fadeIn"> Sample text sample text sample text</p>
+		<p  class="animate__animated animate__fadeIn"> Sample text sample text sample text sample text sample text</p>
+				<p  class="animate__animated animate__fadeIn"> Sample text sample text sample text sample text sample text</p>
 		<p  class="animate__animated animate__fadeIn animate__delay-1s"> Sample text sample text sample text sample text sample text</p>
 		<p  class="animate__animated animate__fadeIn animate__delay-1s"> Sample text sample text sample text sample text sample text</p>
 		<p  class="animate__animated animate__fadeIn animate__delay-2s"> Sample text sample text sample text sample text sample text</p>
