--- a/page1.html
+++ b/page1.html
@@ -13,15 +13,17 @@
 		<!-- Header -->
 			<header id="header">
         <h1>Introduction</h1>
-			
-		<p  class="animate__animated animate__fadeIn"> Sample text sample text sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn"> Sample text sample text sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-1s"> Sample text sample text sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-1s"> Sample text sample text sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-2s"> Sample text sample text sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-2s"> Sample text sample text sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-3s"> Sample text sample text sample text sample text sample text</p>
-		<p  class="animate__animated animate__fadeIn animate__delay-3s"> Sample text sample text sample text sample text sample text</p>
+				
+ 
+		<p  class="animate__animated animate__fadeIn"> How does Americanism, a notion that has historically incorporated vigorous sentiments of personal freedoms andt</p>
+		<p  class="animate__animated animate__fadeIn"> holds democracy in high regard, restructure itself to include fascistic rule? In fact, fascism can be declared </p>
+		<p  class="animate__animated animate__fadeIn animate__delay-1s"> an enemy of contemporary  Americanism. A redefining of Americanism thus, cannot be imagined; rather, it would necessitate radical</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-1s"> upheaval to catalyze a new widespread ideology that incorporates fascistic sentiment. Contemporary American far-right</p>
+		<p  class="animate__animated animate__fadeIn animate__delay-2s">  movements do not observe widespread adoption, evidently, due to unpopularity with the broader populace. It can </p>
+		<p  class="animate__animated animate__fadeIn animate__delay-2s"> also be reasoned that these attitudes are in stark opposition to the very basis of Americanism: the Constitution. </p>
+		<p  class="animate__animated animate__fadeIn animate__delay-3s"> Therefore, momentum will be an integral component of the swaying of public consciousness. </p>
+		<p>Technological advancements and future developments in telecommunication are viable ways in which this may occur. The ease in propagating media to the masses has the potential to generate momentum. Technology is advancing at a rate we have never seen; for instance, modern advancements have enabled the creation of more sophisticated and practical artificial intelligence (AI) models now being employed in our contemporary world. We can foresee AI ingrained in every facet of life, providing convenience and efficiency, but also as an asset enabling malicious attacks. AI generated content possesses the ability to sway the opinion of those less technologically-savvy. As it evolves, it will make it increasingly difficult to discern between human and computer-generated material. Further, it is projected that cyber-attacks will become more frequent, and thus it is not unimaginable that these attacks will be done to promote a certain agenda. </p>
+		<p>To deviate from Americanism will ultimately fall on a catalyst, whether that be a social movement or the utilization of novel technologies, to generate the necessary momentum to seize widespread adoption of a fascistic ideology. In turn, this will reorient the country towards a fascistic future, far apart from its democratic cornerstone. </p>
 
 	</header>
 		
@@ -30,11 +32,11 @@
 
 
 		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page2.html" method="get">
-			  <button type="submit">Option 1</button>
+			  <button type="submit">Americanism</button>
 			</form>
 
 		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page3.html" method="get">
-			  <button type="submit">Option 2</button>
+			  <button type="submit">Pro-Fascism</button>
 			</form>
 
 
