--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1 class="animate__animated animate__fadeInLeftBig">Fascist!</h1>
-				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> The reader has the option to make choices that affect the narrative. These choices, no matter
-				how trivial, determine whether this futuristic fascism survives or is toppled in its early conception. </p>
+				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> Read how a future American fascism may manifest  </p>
 
 			<form class="animate__animated animate__fadeIn animate__delay-2s" action="page1.html" method="get">
 			  <button type="submit">Jump right in.</button>
