--- a/page2.html
+++ b/page2.html
@@ -2,21 +2,37 @@
 
 <html>
 	<head>
-		<title>The Outcome</title>
+		<title>Introduction</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	</head>
-	<body class="is-preload">
+	<body>
 
 		<!-- Header -->
 			<header id="header">
-        <h1>Fascist!</h1>
-			</header>
+        <h1>Introduction</h1>
+				
+		<p>It is difficult to imagine and perhaps highly unlikely for fascism to take hold during a period of economic prosperity as there would be no impetus to divert from the pre-established democratic ideals that define the United States.  Therefore, we envision a lengthy period of economic downturn that invigorates frustrations within the nation’s population. Of course, this would deviate from the notion of American exceptionalism that has come to define the U.S., particularly regarding domestic output and productivity.  </p>
+		<p>Possible ways in which this can manifest includes unprecedented environmental disaster of epic proportions due to climate change, highly infectious and deadly disease, and the failure of the U.S. to maintain its position as an economic powerhouse due to poor policy enactment. A prolonged economic downturn will entail doubts on the pre-existing economic structure and, accordingly, will likely be challenged by the subset of the population most affected–the poor and working class. This lays the proper groundwork for which fascism can subvert the established system as promises can be made for a complete economic redirection under a new proposed–and fascistic system. </p>
+		<p>However, this would necessitate a major economic shock such that the U.S. fails to recover from quickly enough to circumvent widespread and persistent social turmoil that presents a realistic threat to the established democratic and capitalist system. Therefore, while unlikely, an economic collapse–the scale and severity of which has never been observed–could produce a fascist U.S. that possibly deviates into more isolationist policy to restore former economic glory.  </p>		
+	</header>
+		
+	
+			
 
-		<form class="animate__animated animate__fadeIn animate__delay-2s" action="index.html" method="get">
-			  <button type="submit">Return to homepage</button>
+
+		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page4.html" method="get">
+			  <button type="submit">Severe Economic Downturn</button>
 			</form>
+
+		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page5.html" method="get">
+			  <button type="submit">World economic power</button>
+			</form>
+
+
+		
 
 		<footer id="footer">
 				
