--- a/page2.html
+++ b/page2.html
@@ -14,21 +14,22 @@
 			<header id="header">
         <h1>Introduction</h1>
 				
-		<p>It is difficult to imagine and perhaps highly unlikely for fascism to take hold during a period of economic prosperity as there would be no impetus to divert from the pre-established democratic ideals that define the United States.  Therefore, we envision a lengthy period of economic downturn that invigorates frustrations within the nation’s population. Of course, this would deviate from the notion of American exceptionalism that has come to define the U.S., particularly regarding domestic output and productivity.  </p>
-		<p>Possible ways in which this can manifest includes unprecedented environmental disaster of epic proportions due to climate change, highly infectious and deadly disease, and the failure of the U.S. to maintain its position as an economic powerhouse due to poor policy enactment. A prolonged economic downturn will entail doubts on the pre-existing economic structure and, accordingly, will likely be challenged by the subset of the population most affected–the poor and working class. This lays the proper groundwork for which fascism can subvert the established system as promises can be made for a complete economic redirection under a new proposed–and fascistic system. </p>
-		<p>However, this would necessitate a major economic shock such that the U.S. fails to recover from quickly enough to circumvent widespread and persistent social turmoil that presents a realistic threat to the established democratic and capitalist system. Therefore, while unlikely, an economic collapse–the scale and severity of which has never been observed–could produce a fascist U.S. that possibly deviates into more isolationist policy to restore former economic glory.  </p>		
+		<p>How does Americanism, a notion that has historically incorporated vigorous sentiments of personal freedoms and holds democracy in high regard, restructure itself to include fascistic rule? In fact, fascism can be declared an enemy of contemporary Americanism. A redefining of Americanism thus, cannot be imagined; rather, it would necessitate radical upheaval to catalyze a new widespread ideology that incorporates fascistic sentiment. Contemporary American far-right movements do not observe widespread adoption, evidently, due to unpopularity with the broader populace. It can also be reasoned that these attitudes are in stark opposition to the very basis of Americanism: the Constitution. Therefore, momentum will be an integral component of the swaying of public consciousness.  </p>
+		<p>Technological advancements and future developments in telecommunication are viable ways in which this may occur. The ease in propagating media to the masses has the potential to generate momentum. Technology is advancing at a rate we have never seen; for instance, modern advancements have enabled the creation of more sophisticated and practical artificial intelligence (AI) models now being employed in our contemporary world. We can foresee AI ingrained in every facet of life, providing convenience and efficiency, but also as an asset enabling malicious attacks. AI generated content possesses the ability to sway the opinion of those less technologically-savvy. As it evolves, it will make it increasingly difficult to discern between human and computer-generated material. Further, it is projected that cyber-attacks will become more frequent, and thus it is not unimaginable that these attacks will be done to promote a certain agenda. </p>
+		<p>To deviate from Americanism will ultimately fall on a catalyst, whether that be a social movement or the utilization of novel technologies, to generate the necessary momentum to seize widespread adoption of a fascistic ideology. In turn, this will reorient the country towards a fascistic future, far apart from its democratic cornerstone. </p>
+
 	</header>
 		
 	
 			
 
 
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page4.html" method="get">
-			  <button type="submit">Severe Economic Downturn</button>
+		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page5.html" method="get">
+			  <button type="submit">Americanism</button>
 			</form>
 
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page5.html" method="get">
-			  <button type="submit">World economic power</button>
+		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page6.html" method="get">
+			  <button type="submit">Pro-Fascism</button>
 			</form>
 
 
