--- a/page3.html
+++ b/page3.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Introduction</title>
+		<title>Economic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
@@ -12,7 +12,7 @@
 
 		<!-- Header -->
 			<header id="header">
-        <h1>Introduction</h1>
+        <h1>Economic</h1>
 				
 		<p>It is difficult to imagine and perhaps highly unlikely for fascism to take hold during a period of economic prosperity as there would be no impetus to divert from the pre-established democratic ideals that define the United States.  Therefore, we envision a lengthy period of economic downturn that invigorates frustrations within the nation’s population. Of course, this would deviate from the notion of American exceptionalism that has come to define the U.S., particularly regarding domestic output and productivity.  </p>
 		<p>Possible ways in which this can manifest includes unprecedented environmental disaster of epic proportions due to climate change, highly infectious and deadly disease, and the failure of the U.S. to maintain its position as an economic powerhouse due to poor policy enactment. A prolonged economic downturn will entail doubts on the pre-existing economic structure and, accordingly, will likely be challenged by the subset of the population most affected–the poor and working class. This lays the proper groundwork for which fascism can subvert the established system as promises can be made for a complete economic redirection under a new proposed–and fascistic system. </p>
