--- a/page4.html
+++ b/page4.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Introduction</title>
+		<title>Military</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
@@ -12,7 +12,7 @@
 
 		<!-- Header -->
 			<header id="header">
-        <h1>Introduction</h1>
+        <h1>Military</h1>
 				
 		<p>Current funding suggests the US will retain its position as a world power. A substantial monetary budget enables U.S.-engineered and produced military equipment to be significantly more advanced than what is produced by other nations. Further, this funding enables the U.S. to retain its global presence by means of its military bases sparsely spread throughout the world. Funding also goes towards preserving national security such as the national guard, which offers a semblance of stability. </p>
 		<p>However, the issue lies within public opinion of the military, Contemporary dwindling enrollment in the military is indicative of a negative public perception. Of course, the government can rectify the issue by means of the Selective Service, but that comes at the risk of generating poor public opinion as it is unlikely that obligatory military service would be viewed upon favorably and the process could reveal inequities if exceptions are made.  </p>
