--- a/page13.html
+++ b/page13.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Introduction</title>
+		<title> Political</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
@@ -12,7 +12,7 @@
 
 		<!-- Header -->
 			<header id="header">
-        <h1>Introduction</h1>
+        <h1>Political</h1>
 				
 		<p>Populist appeals have proven to be an effective means of swaying public consciousness in support of fascistic governance. Private interests, particularly of those most affluent, have the proclivity to retain their wealth by circumventing taxation of their assets. Projecting into the future, the population who enjoys this status is likely to remain a small subset of the overall populace, forming a minority group. Yet, it is possible for this population to exert authority over the majority by appealing to attitudes indiscriminate of personal income status.  </p>
     <p>This can be achieved via rhetoric that appeals towards nativist sentiment. An assumption is made that this future version of the U.S. retains the defining features of a core country and, accordingly, is attractive to would-be expats. Poor economic conditions would create an efflux of population and render this approach null. Assuming there is no absolute homogeneity–that is, in cultural, economic, and social aspects–there would exist an outgroup and ingroup such that populist appeals can be exploited, and the outgroup can be marginalized in favor of the more expansive and influential ingroup.  </p>
