--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1 class="animate__animated animate__fadeInLeftBig">Fascist!</h1>
-				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> Read how a future American fascism may manifest.  </p>
+				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> Read how a future American fascism may manifest. Choose how it may happen. </p>
 
 			<form class="animate__animated animate__fadeIn animate__delay-2s" action="page1.html" method="get">
 			  <button type="submit">Jump right in.</button>
