--- a/page3.html
+++ b/page3.html
@@ -23,12 +23,12 @@
 			
 
 
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page6.html" method="get">
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page6.html" method="get">
 			  <button type="submit">Severe Economic Downturn</button>
 			</form>
 
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page7.html" method="get">
-			  <button type="submit">World economic power</button>
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page7.html" method="get">
+			  <button type="submit">World Economic Power</button>
 			</form>
 
 
