--- a/page2.html
+++ b/page2.html
@@ -28,7 +28,7 @@
 			</form>
 
 		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page5.html" method="get">
-			  <button type="submit">World economic power</button>
+			  <button type="submit">World Economic Power</button>
 			</form>
 
 
