--- a/page7.html
+++ b/page7.html
@@ -20,12 +20,12 @@
 		<p>Another possibility, assuming a future U.S. military retains its chain of command, is the ratification of an internal executive order that commands the military to overthrow the pre-existing government. This would require a dystopic scenario to occur, severely hindering governmental processes from being performed and an incapacity for the government to preserve a semblance of peace and order. </p>
 
 
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page14.html" method="get">
-			  <button type="submit">Military coup</button>
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page14.html" method="get">
+			  <button type="submit">Military Coup</button>
 			</form>
 
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page15.html" method="get">
-			  <button type="submit">No military Coup</button>
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page15.html" method="get">
+			  <button type="submit">No Military Coup</button>
 			</form>
 
 
