--- a/page8.html
+++ b/page8.html
@@ -19,11 +19,11 @@
     <p>In a doomsday scenario, a future U.S. would experience the deteriorization of pre-dominant political institutions, paving the path for which a rising political movement–perhaps fascist-leaning–to supersede it. On the contrary, an optimistic scenario, resembling the continuation of political processes and intact structure of the U.S. government, could permit the leveraging of political institutions to reinforce a fascist-like agenda. Therefore, we would observe a gradual decline in liberal democracy and freedoms unless it gives ignition to a radical social insurrection with mass-appeal. However, the former appears more likely to change to systems as robust as the modern government entail drastic change which may be unfeasible in the short-term.  </p>
 
         
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page16.html" method="get">
-			  <button type="submit"> Gradual decline</button>
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page16.html" method="get">
+			  <button type="submit"> Gradual (Political) Decline</button>
 			</form>
 
-		<form class="animate__animated animate__fadeIn animate__delay-4s" action="page17.html" method="get">
+		<form class="animate__animated animate__fadeIn animate__delay-2s" action="page17.html" method="get">
 			  <button type="submit">Populist Insurrection</button>
 			</form>
 
