--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<p class="animate__animated animate__fadeIn animate__delay-2s">  <strong> A future fascist world imagined. </strong> Read how a future American fascism may manifest. Choose how it may happen. </p>
 
 			<form class="animate__animated animate__fadeIn animate__delay-2s" action="page1.html" method="get">
-			  <button type="submit">Jump right in.</button>
+			  <button type="submit">Continue.</button>
 			</form>
 		
 		<!-- Footer -->
